--- a/style.css
+++ b/style.css
@@ -28,10 +28,6 @@ header nav {
     align-self: center;
 }
 
-header div {
-    justify-self: end;
-    align-self: center;
-}
 
 header ul {
     display: grid;
@@ -41,4 +37,17 @@ header ul {
 
 header ul li {
     list-style: none;
+}
+
+header div {
+    justify-self: end;
+    align-self: center;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1.5rem;
+}
+
+header div span {
+    font-size: 40px;
 }
