--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -156,7 +156,7 @@ footer {
     background-color: whitesmoke;
 
     display: grid;
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 1fr 6fr 1fr;
     align-items: center;
 }
 
@@ -185,4 +185,8 @@ footer .parte-superior {
 
 footer .parte-inferior a {
     margin-right: 3%;
+}
+
+.fa-arrow-up {
+    font-size: 35px;
 }
