Adiciona ícone de lua, que quando clicado irá mudar para o modo escuro

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -66,6 +66,10 @@ header div i {
     font-size: 20px;
 }
 
+.container-icones {
+    display: flex;
+}
+
 /* ----- Main ----- */
 
 /* --- Novidades --- */
