--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -27,8 +27,6 @@ header {
 
     font-size: 20px;
 
-    box-shadow: 0 4px 25px 1px rgba(0, 0, 0, 0.26);
-
     position: sticky;
     top: 0;
 }
@@ -71,6 +69,23 @@ header div i {
 }
 
 /* ----- Main ----- */
+
+.banner-apresentacao {
+    width: 100%;
+    height: 690px;
+
+    background-image: url("../imagens/bannerPorDoSol.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    text-align: center;
+}
+
+.banner-apresentacao h1 {
+    color: white;
+    position: relative;
+    top: 50%;
+}
 
 /* --- Novidades --- */
 
