--- a/assets/style/styleDark.css
+++ b/assets/style/styleDark.css
@@ -23,6 +23,11 @@ body {
     background-color: var(--backgroundPrimario);
 }
 
+
+i, button {
+    cursor: pointer;
+}
+
 /* ----- Header ----- */
 
 header {
