--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,6 +17,7 @@
     --backgroundSecundario: #f3f3f3;
     --backgroundPrimario: #ffffff;
     --corCaracteres: #000;
+    --roxo: #5903c2;
 }
 
 body {
@@ -25,6 +26,10 @@ body {
 
 i, button {
     cursor: pointer;
+}
+
+i:hover, a:hover {
+    color: var(--roxo);
 }
 
 /* ----- Header ----- */
@@ -138,8 +143,8 @@ header div i {
     padding: 1% 0;
 
     border-radius: .15rem;
-    border: 1px solid purple;
-    background-color: purple;
+    border: 1px solid var(--roxo);
+    background-color: var(--roxo);
 
     color: white;
     font-size: 17px;
