--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -64,6 +64,7 @@ header ul {
 
 header ul li {
     list-style: none;
+    width: 120px;
 }
 
 header ul li a {
@@ -179,7 +180,6 @@ header div i {
     
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
     grid-gap: 40px;
 }
 
@@ -199,7 +199,7 @@ footer {
     background-color: var(--backgroundSecundario);
 
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr;
+    grid-template-columns: 1fr 4fr 1fr;
     align-items: center;
 }
 
@@ -226,6 +226,109 @@ footer .parte-inferior a {
     margin-right: 3%;
 }
 
+
+.container-seta {
+    text-align: right;
+}
+
 .fa-arrow-up {
     font-size: 35px;
+}
+
+
+/* Responsividade */
+
+/* Header */
+
+@media screen and (max-width: 1538px) {
+    :root {
+        --padding-lateral-maior: 15%;
+    }
+}
+
+@media screen and (max-width: 1354px) {
+    :root {
+        --padding-lateral-maior: 10%;
+    }
+}
+
+@media screen and (max-width: 1164px) {
+    header {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+        justify-content: center;
+
+        grid-gap: 20px;
+    }
+
+    header img, header .container-icones {
+        justify-self: center;
+    }
+
+    .novidade img {
+        width: 350px;
+    }
+
+    .novidade div h2 {
+        font-size: 30px;
+    }
+
+    footer {
+        grid-gap: 50px;
+    }
+
+    footer i {
+        margin-right: 3%;
+    }
+}
+
+@media screen and (max-width: 904px) {
+    .novidade div p {
+        width: 100%;
+        font-size: 16px;
+    }
+
+    .novidade div h2 {
+        font-size: 25px;
+    }
+
+    .novidade div button {
+        max-width: 45%;
+    }
+}
+
+@media screen and (max-width: 839px) {
+    .novidade {
+        display: flex;
+
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .novidade button {
+        align-self: center;
+        width: 100%;
+    }
+
+    .novidade2 {
+        flex-direction: column-reverse;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .categorias {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto;
+    }
+
+    .categorias img {
+        width: 70%;
+
+        justify-self: center;
+    }
+
+    .categorias h2 {
+        justify-self: center;
+    }
 }
