--- a/assets/style/produto.css
+++ b/assets/style/produto.css
@@ -64,7 +64,6 @@ header ul {
 
 header ul li {
     list-style: none;
-    width: 120px;
 }
 
 header ul li a {
@@ -86,6 +85,73 @@ header div i {
 
 .container-icones {
     display: flex;
+}
+
+/* ------ Main ------ */
+
+main {
+    padding: 0 var(--padding-lateral);
+}
+
+main > div {
+    padding-top: var(--padding-secoes);
+    
+    text-align: center;
+}
+
+main > div button {
+    border: var(--corCaracteres) solid 1px;
+    width: 15rem;
+
+    padding: .5rem;
+    background-color: transparent;
+    border-radius: 25px;
+
+    margin: 0 2%;
+
+    font-size: 1rem;
+}
+
+main > div button:hover {
+    background-color: var(--roxo);
+    color: var(--backgroundPrimario);
+}
+
+main section {
+    display: grid;
+    grid-gap: 5rem;
+    padding: var(--padding-secoes) 0;
+}
+
+main section div {
+    display: flex;
+}
+
+main section div img {
+    width: 200px;
+}
+
+main section div div {
+    display: flex;
+    flex-direction: column;
+
+    align-self: center;
+    margin-left: 3rem;
+
+    width: 100%;
+}
+
+main section div div h2 {
+    font-size: 35px;
+}
+
+main section div div p {
+    width: 50%;
+    font-size: 19px;
+}
+
+.processador {
+    display: none;
 }
 
 /* ----- Footer ----- */
@@ -135,7 +201,6 @@ footer .parte-inferior a {
 
 /* Responsividade */
 
-/* Header */
 
 @media screen and (max-width: 1538px) {
     :root {
