--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -91,7 +91,7 @@ header div i {
 
 .banner-apresentacao {
     width: 100%;
-    height: 690px;
+    height: 800px;
 
     background-image: url("../imagens/bannerPorDoSol.png");
     background-repeat: no-repeat;
@@ -105,15 +105,18 @@ header div i {
     text-align: center;
 }
 
-.banner-apresentacao h2 {
+.banner-apresentacao p {
     color: #fff;
-    width: 45%;
+    width: 55%;
+
+    font-size: 1.3rem;
 }
 
 .banner-apresentacao h1 {
-    font-size: 1.7rem;
+    font-size: 2.8rem;
+    width: 50%;
 
-    margin-bottom: 5rem;
+    margin-bottom: 2.5rem;
 }
 
 .banner-apresentacao h1 {
